<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/love2048"
            android:textColor="@color/light_green"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_best_score"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/current_score"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/best_score"
            android:textColor="@color/green"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_score"
        android:layout_margin="5dp"
        android:background="@drawable/bg_round_corner_alpha_green">

        <love.smartalk.game2048.widget.Love2048Layout
            android:id="@+id/ll_game_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </RelativeLayout>


</RelativeLayout>
